# array-primops

./: .gitignore  LICENSE  README.md  array-primops.cabal  stack.yaml
GHC/Prim/: Array.hs  SmallArray.hs
benchmarks/: Benchmarks.hs  array-primops-benchmarks.cabal
cbits/: array.cmm  smallArray.cmm
tests/: Tests.hs
