
name:                array-primops
version:             0.1.0.0
synopsis:            Extra foreign primops for primitive arrays
license:             BSD3
license-file:        LICENSE
author:              Andr치s Kov치cs
maintainer:          puttamalac@gmail.com
copyright:           2015 Andr치s Kov치cs
category:            Data
build-type:          Simple
cabal-version:       >=1.10      

library
  default-language: Haskell2010

  if impl(ghc >= 7.10)

    exposed-modules:
      GHC.Prim.Array
      GHC.Prim.SmallArray

    build-depends:
      base >= 4.8 && <4.9 ,
      ghc-prim == 0.4.0.0

    c-sources:
      cbits/array.cmm ,
      cbits/smallArray.cmm

  if impl(ghc == 7.8.*)
    
    exposed-modules:
      GHC.Prim.Array

    build-depends:
      ghc-prim >= 0.3.1.0 && <= 0.4.0.0 ,
      base >= 4.7 && <4.9

    c-sources:
      cbits/array.cmm

benchmark benchmarks
  default-language: Haskell2010
  hs-source-dirs: . benchmarks

  main-is: Benchmarks.hs
  type: exitcode-stdio-1.0

  build-depends:
    base,
    ghc-prim,
    criterion >= 1.0

  c-sources: 
    cbits/array.cmm,
    cbits/smallArray.cmm

  ghc-options: -O2 -fllvm
